--- a/frontFarm/src/app/pages/ventas/ventas.component.html
+++ b/frontFarm/src/app/pages/ventas/ventas.component.html
@@ -398,8 +398,8 @@
         <!-- Cambio y mensajes -->
         <p class="mt-3 cambio">Cambio: <strong>{{ cambio | currency }}</strong></p>
 
-        <p *ngIf="pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1 < total" class="text-danger mt-3">
-          Aún falta cubrir el total de la venta.
+        <p *ngIf="pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1 < total" class="text-danger mt-3" style="font-size: large;">
+          Aún falta cubrir: <strong>{{ (total - pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1) | currency }}</strong>
         </p>
         <p *ngIf="pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1 >= total" class="text-success mt-3">
           El total de la venta ha sido cubierto.
