Quitar promociones del componente Compras

--- a/frontFarm/src/app/pages/compras/compras.component.html
+++ b/frontFarm/src/app/pages/compras/compras.component.html
@@ -195,7 +195,7 @@
                         </div>
 
                         <!-- SELECCIÓN DE TIPO DE PROMO -->
-                        <div class="row text-center mb-1">
+                        <!-- <div class="row text-center mb-1">
                             <div class="col-2 fw-bold">
                                 <label>Elige promoción:</label>
                             </div>
@@ -227,7 +227,7 @@
                                     Temporada
                                 </label>
                             </div>
-                            <!-- INAPAM -->
+                            
                             <div class="col-2">
                                 <label [ngClass]="{'selected-checkbox': editPromos.descuentoINAPAM}">
                                     INAPAM(+5%)
@@ -236,10 +236,10 @@
                                 </label>
                             </div>
 
-                        </div>
+                        </div> -->
 
                         <!-- POR DÍA -->
-                        <div *ngIf="editPromos.tipoPromocion === 'dia'" class="mb-4">
+                        <!-- <div *ngIf="editPromos.tipoPromocion === 'dia'" class="mb-4">
                             <div class="row fw-bold text-center align-items-center">
                                 <div class="col-2 text-end" style="padding-top: 10px;">Día</div>
                                 <div class="col-2" style="padding-top: 10px;">% Desc.</div>
@@ -269,11 +269,11 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
 
                         <!-- POR CANTIDAD -->
-                        <div *ngIf="editPromos.tipoPromocion==='cantidad'" class="row mb-4 align-items-center">
+                        <!-- <div *ngIf="editPromos.tipoPromocion==='cantidad'" class="row mb-4 align-items-center">
                             <div class="row fw-bold text-center align-items-center">
                                 <div class="col-2" style="padding-top: 10px;">Cantidad</div>
                                 <div class="col-5" style="padding-top: 10px;">Inicia</div>
@@ -298,10 +298,10 @@
                                         class="form-control form-control-sm">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- POR TEMPORADA -->
-                        <div *ngIf="editPromos.tipoPromocion==='temporada'" class="row mb-3">
+                        <!-- <div *ngIf="editPromos.tipoPromocion==='temporada'" class="row mb-3">
                             <div class="row fw-bold text-center align-items-center">
                                 <div class="col-2" style="padding-top: 10px;">% Desc.</div>
                                 <div class="col-4" style="padding-top: 10px;">Inicia</div>
@@ -327,7 +327,7 @@
                                 </div>
                             </div>
                         </div>
-
+ -->
                         <!-- BOTONES -->
                         <div class="guardar-cancelar">
                             <button class="btn-rojo-chico" style="margin-left: 2rem;"
