Agregar botón Aplicar, para refrescar página en Dashboard - Ingresos x Tiempo

--- a/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.html
+++ b/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.html
@@ -20,6 +20,12 @@
         <option value="mes">Por mes</option>
         <option value="anio">Por año</option>
     </select>
+
+    <!-- <div class="col-md-1 text-end mt-3"> -->
+        <button class="btn-gris"
+                matTooltip="Recalcular datos" (click)="cargar()">Aplicar
+        </button>
+    <!-- </div> -->
 </div>
 
 <div class="kpis">
