--- a/frontFarm/src/app/pages/ventas/ventas.component.html
+++ b/frontFarm/src/app/pages/ventas/ventas.component.html
@@ -12,7 +12,7 @@
       </select>
     </div>
 
-    <div class="col-3 d-flex align-items-center justify-content-center" *ngIf="carrito.length > 0">
+    <!-- <div class="col-3 d-flex align-items-center justify-content-center" *ngIf="carrito.length > 0">
       <label class="form-check-label me-2" for="chkServicioMedico">Venta por servicio médico</label>
       <input
         id="chkServicioMedico"
@@ -20,9 +20,9 @@
         class="form-check-input"
         [(ngModel)]="porServicioMedico"
       />
-    </div>
+    </div> -->
     
-    <div class="col-3 d-flex justify-content-center">
+    <div class="col-6 d-flex justify-content-end">
       <button (click)="abrirModalConsultaPrecio()" class="btn-gris consultar-precio">Consultar Precio</button>
     </div>
   </div>
@@ -409,7 +409,7 @@
         <p class="mt-3 cambio">Cambio: <strong>{{ cambio | currency }}</strong></p>
 
         <p *ngIf="pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1 < total" class="text-danger mt-3" style="font-size: large;">
-          Aún falta cubrir: <strong>{{ (total - pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1) | currency }}</strong>
+          Aún falta cubrir: <strong>{{ (total - pagoEfectivo - pagoTarjeta1 - pagoTransferencia1 - pagoVale1) | currency }}</strong>
         </p>
         <p *ngIf="pagoEfectivo + pagoTarjeta1 + pagoTransferencia1 + pagoVale1 >= total" class="text-success mt-3">
           El total de la venta ha sido cubierto.
