--- a/frontFarm/src/styles.css
+++ b/frontFarm/src/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .titulo-tabla {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
   font-size: 18px;
   color: rgb(2, 18, 82);
   font-weight: 600;
@@ -36,16 +36,17 @@ body {
   text-align: center;
 }
 
-.titulo {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 24px;
-  font-weight: bold;
+.titulo{
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
   margin-bottom: 5px;
   color: #3f58fb;
 }
 
+
 .subtitulo {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
@@ -326,7 +327,7 @@ button {
   width: 100%;
   border-collapse: collapse;
   background-color: #f9f9f9 !important;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
   font: bold;
 }
 
@@ -363,7 +364,7 @@ button {
   width: 100%;
   border-collapse: collapse;
   background-color: #f9f9f9 !important;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Calibri, 'Trebuchet MS', sans-serif;
   font: bold;
 }
 
