--- a/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
+++ b/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
@@ -29,28 +29,44 @@ select, input {
 }
 
 .kpi-card {
-  /* background: #fff; */
   border-radius: 10px;
-  padding: 1rem;
+  padding: 0.7rem 0.9rem;
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
   text-align: center;
+  line-height: 1;
 }
 
 .kpi-title {
-  font-size: 0.85rem;
-  /* color: #666; */
-  margin-bottom: 0.4rem;
+  font-size: 0.82rem;
+  margin-bottom: 0.25rem;
 }
 
 .kpi-value {
-  font-size: 1rem;
+  font-size: 0.98rem;
   font-weight: 600;
+}
+
+.kpi-info{
+  display: inline-block;
+  margin-left: 0.35rem;
+  font-size: 0.85rem;
+  opacity: 0.75;
+  cursor: help;
+  user-select: none;
 }
 
 .kpi-card.ventas { border-left: 5px solid #1E88E5; background-color: rgb(121, 205, 253); color: #012eac;}
 .kpi-card.utilidad { border-left: 5px solid #2E7D32; background-color: rgb(205, 249, 193); color: #00551c; }
 .kpi-card.margen { border-left: 5px solid #6A1B9A; background-color: rgb(245, 207, 250); color: #62027a; }
 .kpi-card.ventas-num { border-left: 5px solid #F57C00; background-color: rgb(252, 192, 162); color: #913101; }
+
+/* ================== PEDIDOS (mismo color en ambos KPIs) ================== */
+.kpi-card.pedidos-num,
+.kpi-card.pedidos-movs {
+  border-left: 5px solid #F57C00;        /* mismo naranja */
+  background-color: rgb(252, 208, 184);  /* suave, cercano al de ventas-num */
+  color: #913101;                         /* mismo tono de texto */                          /* texto */
+}
 
 
 .chart-wrapper {
